# strictix

./: .gitignore  Cargo.toml  LICENSE-AGPL  LICENSE-MIT  NOTICE  README.md  TODO.md  default.nix  flake.nix  readme.md  shell.nix
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  dirs.rs  dump.rs  err.rs  explain.rs  fix.rs  lib.rs  lint.rs  list.rs  main.rs  traits.rs  utils.rs
crates/cli/src/fix/: all.rs  single.rs
crates/cli/tests/: _utils.rs  cli_traversal.rs  collapsible_inherit_from.rs  deprecated.rs  deprecated_to_path.rs  empty_attrset_merge.rs  empty_let_in.rs  if_else_empty_attrset.rs  if_else_empty_list.rs  list_concat_merge.rs  manual_inherit_from.rs  redundant_if_bool.rs  repeated_expression.rs  repeated_keys.rs  single.rs  single_use_let.rs  unnecessary_rec.rs  unquoted_splice.rs  unsorted_pattern_params.rs  unused_inherit.rs  unused_lambda_param.rs  unused_pattern_bind.rs  unused_pattern_param.rs  useless_parens.rs  with_expression.rs
crates/cli/tests/snapshots/: bool_comparison__fix_101b3f071d9ef6e1c6cddd4b3d4d2a4f7d4cf2764ff5811ee2d532b3ccb45690.snap  bool_comparison__fix_43a857afe823ef70b47d4e0fbf00af8951e09a9a9891d29b3ba9e762a2978adb.snap  bool_comparison__fix_4e4d41c24c973c0bc560aeaaf95c464f576f6a4446acc939f98ebb9329d6b700.snap  bool_comparison__fix_5d2c71eef69cc07e519dc3646f786ba7a32f5546c3a2194d2636a2684391e3f1.snap  bool_comparison__fix_630b66ca8810d52f4e68ed1c8d68db36bce21a1cb65b60ec15b901e87b62c13a.snap  bool_comparison__fix_82b623ef0ecd1e0e70c1dbe39f02832657a82dd5a58392f23345b22467a89b1a.snap  bool_comparison__fix_9f48ebd94e1733d7ccda130d62830499b7344b794644163af528b0c834c5cca4.snap  bool_comparison__fix_a09de9082d480f3e54de569de2789ebfee65a1ecbd31dcbdfc543b8b13e4bda4.snap  bool_comparison__fix_a11a365119d2c64750d4253426c99db3e016d21e6183a706845dfed17d803393.snap  bool_comparison__fix_a14c6695accf2da707eaeb76ded232840736b9034ef1b55d1c8c92b9f5098a14.snap  bool_comparison__fix_a30c834e61da781cbcbc0c95b79ab0a51a81f1fdc5a5d885d778f43d268ed2b3.snap  bool_comparison__fix_a83e7884e4c039d6517795734c6cab32d5e69473f7a6b6fe660eec020d70993d.snap  deprecated__fix_0c29e08bf19161cf47bb6e3e7440b98cc345897d1a41be30d66b9e54cea1f6e2.snap  (+321 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs  lints.rs  make.rs  utils.rs
crates/core/src/lints/: bool_comparison.rs  bool_simplification.rs  collapsible_inherit_from.rs  collapsible_let_in.rs  deprecated.rs  deprecated_to_path.rs  empty_attrset_merge.rs  empty_inherit.rs  empty_let_in.rs  empty_list_concat.rs  empty_pattern.rs  eta_reduction.rs  if_else_empty_attrset.rs  if_else_empty_list.rs  legacy_let_syntax.rs  list_concat_merge.rs  manual_inherit.rs  manual_inherit_from.rs  redundant_if_bool.rs  repeated_expression.rs  repeated_keys.rs  single_use_let.rs  unnecessary_rec.rs  unquoted_splice.rs  unquoted_uri.rs  unsorted_pattern_params.rs  unused_inherit.rs  unused_lambda_param.rs  unused_pattern_bind.rs  unused_pattern_param.rs  useless_has_attr.rs  useless_parens.rs  with_expression.rs
crates/strictix-macros/: Cargo.toml
crates/strictix-macros/src/: lib.rs  metadata.rs  test.rs
crates/strictix-vfs/: Cargo.toml
crates/strictix-vfs/src/: lib.rs
docs/: architecture.md  notes.md  release.md
flake-parts/: ci.nix  dogfood.nix  fmt.nix  overlay.nix  strictix.nix
integrations/vim/: flake-part.nix
integrations/vim/plugin/: strictix.vim
lib/src/: lib.rs  lints.rs  make.rs
lib/src/lints/: bool_simplification.rs  collapsible_inherit_from.rs  empty_attrset_merge.rs  manual_inherit_from.rs  redundant_if_bool.rs  single_use_let.rs  unnecessary_rec.rs
macros/src/: metadata.rs
nix/parts/: cachix.nix  docs.nix  dogfood.nix  fmt.nix  git-hooks.nix  rust.nix  strictix.nix
vim-plugin/ftplugin/: nix.vim
vim-plugin/plugin/: strictix.vim
