[workspace]
resolver = "3"

members = ["bin", "lib", "macros", "vfs"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
clap = "4.1.14"
hex = "0.4.3"
ignore = "0.4.20"
indexmap = "2.13.0"
indoc = "2.0.7"
insta = { features = ["filters"], version = "1.46.3" }
lazy_static = "1.5"
lib.path = "./lib"
macros.path = "./macros"
paste = "1.0.15"
proc-macro2 = "1.0.106"
quote = "1.0"
rayon = "1.11.0"
rnix = "0.14.0"
rowan = "0.16.1"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = { version = "1.0.149" }
sha2 = "0.10.9"
similar = "2.7.0"
strip-ansi-escapes = "0.2.1"
syn = { features = ["full"], version = "2.0" }
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.0.6"
vfs.path = "./vfs"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
