[workspace]
resolver = "3"

members = [
  "crates/cli",
  "crates/core",
  "crates/strictix-macros",
  "crates/strictix-vfs",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.100"
ariadne = "0.4"
clap = { features = ["derive"], version = "4" }
hex = "0.4.3"
ignore = "0.4.18"
indexmap = { features = ["rayon"], version = "2" }
indoc = "2.0.6"
insta = { features = ["filters"], version = "1.43.2" }
lib = { package = "strictix-core", path = "./crates/core" }
macros = { package = "strictix-macros", path = "./crates/strictix-macros" }
paste = "1.0.15"
proc-macro2 = "1.0.27"
proptest = "1.9.0"
quote = "1.0"
rayon = "1.5.1"
rnix = "0.12.0"
rowan = "0.15.17"
serde = { features = ["derive"], version = "1.0.68" }
serde_json = { version = "1.0.68" }
sha2 = "0.10.9"
similar = "2.1.0"
strip-ansi-escapes = "0.1.1"
syn = { features = ["full"], version = "2.0" }
tempfile = "3.23.0"
thiserror = "1.0.30"
toml = "0.8"
vfs = { package = "strictix-vfs", path = "./crates/strictix-vfs" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
