[package]
description = "Core lint definitions and analysis for strictix"
edition.workspace = true
license.workspace = true
name = "strictix-core"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros.workspace = true
rnix.workspace = true
rowan.workspace = true
serde = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }

[features]
default = []
json-out = ["serde", "serde_json"]

[lints]
workspace = true
